Added dashboard widgets for earnings per month and per quarter